# tee-baker

./: .env  Dockerfile  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 30b32a386aaa_create_user_table.py
app/: main.py
app/api/: deps.py  main.py
app/api/auth/: models.py  router.py  schemas.py  service.py  utils.py
app/core/: config.py  database.py  middlewares.py  models.py
app/core/exceptions/: common.py
app/core/schemas/: enums.py  response.py
src/: main.py
