[tool.poetry]
name = "tee-baker-server"
version = "0.1.0"
description = "Backend server for tee-baker app which is used to generate t-shirt design"
authors = ["Huzaifa Arshad <huzaifa.arshad@emumba.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
